# artificial-intelligence

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: architecture.md  pypi-release.md
examples/: blocksworld_demo.py  csp_demo.py  delivery_csp_demo.py  delivery_demo.py  foundation_models_demo.py  graph_astar_demo.py  graph_bfs_demo.py  graph_branch_and_bound_demo.py  graph_dfs_demo.py  graph_gbfs_demo.py  graph_ucs_demo.py  labyrinth_demo.py  logic_dpll_demo.py  placeholder_incremental.py  placeholder_precomputed.py  resolution_demo.py  search_demo.py  strips_demo.py  uncertainty_demo.py
examples/configs/: blocksworld_sussman_anomaly.json
src/ai9414/: __init__.py  __main__.py  cli.py
src/ai9414/core/: __init__.py  app.py  config.py  errors.py  models.py  server.py
src/ai9414/csp/: __init__.py  api.py  examples.py  models.py  solver.py  student.py  trace.py
src/ai9414/delivery/: __init__.py  api.py  examples.py  models.py  solver.py  trace.py
src/ai9414/delivery_csp/: __init__.py  api.py  examples.py  models.py  solver.py  student.py  trace.py
src/ai9414/demo/: __init__.py  api.py
src/ai9414/foundation_models/: __init__.py  api.py  examples.py  models.py  student.py  trace.py
src/ai9414/frontend/: __init__.py
src/ai9414/frontend/solution/: __init__.py  app.js  index.html  style.css
src/ai9414/frontend/student/: app.js  (+3 more)
src/ai9414/graph_astar/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/graph_bfs/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/graph_dfs/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/graph_gbfs/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/graph_ucs/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/labyrinth/: __init__.py  api.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/logic/: __init__.py  api.py  examples.py  models.py  parser.py  solver.py  student.py  trace.py
src/ai9414/resolution/: __init__.py  api.py  examples.py  models.py  solver.py  trace.py
src/ai9414/search/: __init__.py  api.py  configs.py  examples.py  generator.py  models.py  solver.py  student.py  trace.py
src/ai9414/strips/: __init__.py  api.py  examples.py  models.py  solver.py  student.py  trace.py
src/ai9414/uncertainty/: __init__.py  api.py  examples.py  models.py  student.py  trace.py
tests/: conftest.py  test_cli.py  test_core.py  test_csp.py  test_delivery.py  test_delivery_csp.py  test_foundation_models.py  test_graph_astar.py  test_graph_bfs.py  test_graph_dfs.py  test_graph_examples.py  test_graph_gbfs.py  test_graph_ucs.py  test_labyrinth.py  test_logic.py  test_resolution.py  test_search_live.py  test_strips.py  test_uncertainty.py
