[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai9414"
version = "0.1.0"
description = "Interactive teaching demos for AI search, logic, planning, CSP, uncertainty, and tokenisation."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Oliver Obst", email = "o.obst@unsw.edu.au" }
]
keywords = [
  "artificial-intelligence",
  "education",
  "teaching",
  "search",
  "logic",
  "planning",
  "csp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn>=0.35,<1.0"
]

[project.urls]
Homepage = "https://github.com/OliverObst/artificial-intelligence"
Repository = "https://github.com/OliverObst/artificial-intelligence"
Issues = "https://github.com/OliverObst/artificial-intelligence/issues"

[project.scripts]
ai9414 = "ai9414.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0",
  "twine>=6.1,<7.0",
]

[tool.hatch.build]
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai9414"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/docs",
  "/AUTHORS",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
